<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="28dp"
    android:padding="10dp"
    android:background="@drawable/round_border_while30"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTieuDe"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp"
        android:text="CHI TIẾT THI"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:text="@string/maMT"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvMaMT"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/tenMT"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvTenMT"
                android:textStyle="bold"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/ngayThi"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvNgayThi"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/diem"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvDiem"
                android:textStyle="bold"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/maTK"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvMaTK"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/hoTen"
                style="@style/style_themltb_tieude" />
            <TextView
                android:id="@+id/tvHoTen"
                style="@style/style_themltb_tentltb" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>